Revert "fix(YSP-627): set the gin spacing to 0 for smartdate-inline"
This reverts commit fea835830412b3722bf802a79008a1213f78ecc3.

--- a/web/themes/custom/ys_admin_theme/css/admin-ui.css
+++ b/web/themes/custom/ys_admin_theme/css/admin-ui.css
@@ -12,8 +12,8 @@
   float: none;
 }
 
-.field--widget-smartdate-inline {
-  --gin-spacing-m: 0;
+.field--widget-smartdate-inline .field-multiple-table tr .form-item:not(:last-of-type) {
+  margin-bottom: auto !important;
 }
 
 /*# sourceMappingURL=admin-ui.css.map */
